refactor: 하나의 스트림으로 dto 생성하도록 수정
Co-authored-by: eun-byeol <62530884+eun-byeol@users.noreply.github.com>